use png in favicon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/slz-logo.png" />
+    <link rel="icon" type="image/x-icon" href="/slz-logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOAS Liberated Zone</title>
   </head>
